--- a/WebGUI/html/widgets/plotly_bar_chart.html
+++ b/WebGUI/html/widgets/plotly_bar_chart.html
@@ -38,7 +38,7 @@
 				console.log(window.frameElement.id);
 				console.log("Dimensions: " + window.innerWidth + " : " + window.innerHeight);
 				window.parent.setupWidget(window.frameElement.id, getAttributes());
-				window.parent.getHistory(window.frameElement.id, getAttributes());
+				window.parent.getPVHistory(window.frameElement.id, getAttributes());
 			}
 
 			function setupPVs(settings)
