Fixed cross-origin communication from (i) page to server and (ii) window content to desktop to comply with current browser security

--- a/WebGUI/html/CodeEditor.html
+++ b/WebGUI/html/CodeEditor.html
@@ -14,7 +14,7 @@
 		
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/CodeEditor.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/js_lib/MultiSelectBox.js"></script>
 
@@ -29,7 +29,7 @@
 	</head>
 
 
-	<body onload='init();'>
+	<body onload='//init() called by DesktopContent.js;'>
 		<!-- Content is filled by JavaScript -->
 		
 		<div class='ConfigurationAPI-popUpDialog-preloadImage' 
