--- a/WebGUI/html/CodeEditor_standalone.html
+++ b/WebGUI/html/CodeEditor_standalone.html
@@ -14,7 +14,7 @@
 		
 		<script type="text/JavaScript" src="../js/Globals.js"></script>
 		<script type="text/JavaScript" src="../js/Debug.js"></script>
-		<script type="text/JavaScript" src="../js/DesktopWindowContentCode.js"></script>
+		<script type="text/JavaScript" src="../js/DesktopContent.js"></script>
 		<script type="text/JavaScript" src="../js/CodeEditor.js"></script>
 		<script type="text/JavaScript" src="../js/js_lib/MultiSelectBox.js"></script>
 
@@ -40,7 +40,7 @@
 	</head>
 
 
-	<body onload='init();'>
+	<body onload='//init() called by DesktopContent.js;'>
 		<!-- Content is filled by JavaScript -->
 		
 		<div class='ConfigurationAPI-popUpDialog-preloadImage' 
