--- a/WebGUI/html/EditUserData.html
+++ b/WebGUI/html/EditUserData.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 	<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
-	<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+	<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 	
 	
 	<link rel="stylesheet" type="text/css" href="/WebPath/css/SecuritySettings.css">
@@ -631,7 +631,7 @@
 	</style>
 </head>
 
-<body onload="init()">
+<body onload="//init() called by DesktopContent.js">
   <!--<h1>Edit User Data</h1>-->
 
   <h2 id="state" style='display:none'></h2>
