--- a/WebGUI/html/FecDirectory.html
+++ b/WebGUI/html/FecDirectory.html
@@ -11,7 +11,7 @@
 		
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 		
 		
 		<script>		
@@ -55,7 +55,7 @@
 	</head>
 	
 	
-	<body onload='init()'>	
+	<body onload='//init() called by DesktopContent.js'>	
 		
 		<h1>Fec Directory</h1>
 		<div id='fecDirectoryDiv'></div>
