--- a/WebGUI/html/MacroMakerSupervisor.html
+++ b/WebGUI/html/MacroMakerSupervisor.html
@@ -25,7 +25,7 @@
 		<script src="/WebPath/js/js_lib/MultiSelectBox.js"></script>	
 
 		<!-- adding DesktopWindowContentCode for tooltip functionality -->
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script> 
+		<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script> 
 
 		<script type="text/JavaScript" src="/WebPath/js/DesktopDashboard.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/DesktopWindow.js"></script>
@@ -107,7 +107,7 @@
         <!-- end ots icon handling -->
 	</head>	
 	
-	<body onload='init();'>
+	<body onload='//init() called by DesktopContent.js;'>
 	</body>
 	
 </html>
