--- a/WebGUI/html/SecuritySettings.html
+++ b/WebGUI/html/SecuritySettings.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 <script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
-<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 <script type="text/JavaScript" src="/WebPath/js/SecuritySettings.js"></script>
 <link rel="stylesheet" type="text/css" href="/WebPath/css/SecuritySettings.css">
 <style>
@@ -15,7 +15,7 @@
 </style>
 </head>
 
-<body onload="init()">
+<body onload="//init() called by DesktopContent.js">
   <!--<h1>Edit Security</h1>-->
   <h2 id="state" style='display:none'></h2>
   <ul>
