--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -7,7 +7,7 @@
 
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/widgetLibrary.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/js_lib/ConfigurationAPI.js"></script>
 
@@ -3347,7 +3347,7 @@
 		</script>
 	</head>
 
-	<body onload='Javascript:init();'>	
+	<body onload='//init() called by DesktopContent.js'>	
 		<div id="navigationBarDiv">	
 	    	  <nav>
 		    <ul id="navigationMenu">
