--- a/WebGUI/html/StateMachineTransitionStepper.html
+++ b/WebGUI/html/StateMachineTransitionStepper.html
@@ -43,7 +43,7 @@
 
 <script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>
 <script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>
-<script type="text/JavaScript"src="/WebPath/js/DesktopWindowContentCode.js"></script>
+<script type="text/JavaScript"src="/WebPath/js/DesktopContent.js"></script>
 <script type="text/JavaScript" src="/WebPath/js/js_lib/ConfigurationAPI.js"></script>
 
 <script>		
@@ -275,7 +275,7 @@
 </head>
 
 
-<body onload='Javascript:init();'>
+<body onload='//init() called by DesktopContent.js'>
 		
 	<div id='transitionButtons'>
 		<a onclick='setIterationBreakpoint()'>
