--- a/WebGUI/html/TestDispatcherMonitor.html
+++ b/WebGUI/html/TestDispatcherMonitor.html
@@ -21,7 +21,7 @@
 		
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 		
 		
 		<script>		
@@ -86,7 +86,7 @@
 	</head>
 	
 	
-	<body onload='Javascript:init();'>	
+	<body onload='//init() called by DesktopContent.js'>	
 			
 		<input type='file' id='popUpDialog-fileUpload' 
 				accept='.fcl' enctype='multipart/form-data' />
