--- a/WebGUI/html/UserSettings.html
+++ b/WebGUI/html/UserSettings.html
@@ -10,7 +10,7 @@
 		 
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>	
+		<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>	
 		
 		<script>		
 				
@@ -1155,7 +1155,7 @@
 	</head>
 	
 	
-	<body onload='Javascript:init();'>	
+	<body onload='//init() called by DesktopContent.js'>	
 		<div id='omni' style='display:none;'> <!-- hide by default until normal mode handling -->
 		
 		<center>This page consists of a Preferences section and an Accounts section.<br><br></center>
