--- a/WebGUI/html/widgets/root_visualizer.html
+++ b/WebGUI/html/widgets/root_visualizer.html
@@ -23,7 +23,7 @@
 
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 <!-- 
 		<link   rel="stylesheet" type="text/css" href="/WebPath/css/ViewerRoot.css" />
 		<script type="text/JavaScript" src="/WebPath/js/visualizers_lib/ViewerRoot.js"></script>
@@ -114,7 +114,7 @@
 
 </head>
 
-	<body onload='Javascript:init();'>
+	<body onload='//init() called by DesktopContent.js'>
 	<div id="container"></div>
 	<div id="simpleGUI" path="/WebPath/UserWebPath/ControlsDashboardData/"	files=""></div>
 	<div>
