--- a/WebGUI/html/Calibrations.html
+++ b/WebGUI/html/Calibrations.html
@@ -58,7 +58,7 @@
 
 <script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>
 <script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>
-<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 
 
 
@@ -333,7 +333,7 @@
 </head>
 
 
-<body onload='Javascript:init();'>
+<body onload='//init() called by DesktopContent.js'>
 
 <h1>Calibration List</h1>
 
