--- a/WebGUI/html/Chat.html
+++ b/WebGUI/html/Chat.html
@@ -208,7 +208,7 @@
 		<link href='/WebPath/css/fonts.css?family=Comfortaa:700,400&subset=latin,greek' rel='stylesheet' type='text/css'>
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 		
 		
 		<script>		
@@ -772,7 +772,7 @@
 	</head>
 	
 	
-	<body onload='Javascript:init();'>	
+	<body onload='//init() called by DesktopContent.js'>	
 			
 
 		<div id='chatInstructions'>
