--- a/WebGUI/html/Console.html
+++ b/WebGUI/html/Console.html
@@ -8,7 +8,7 @@
 				
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 		
 
 		<style type="text/css">		
@@ -1196,7 +1196,7 @@
 	</head>
 	
 	
-	<body onload='Javascript:init();'>			
+	<body onload='//init() called by DesktopContent.js'>			
 
 
 		<div id='downloadIconDiv' onmouseup='downloadMessages()' title='Download console messages to text file.' style='float: left; margin: -1px 10px 0px 10px; cursor: pointer;'>			
