--- a/WebGUI/html/DeleteWiz_ConfigurationGUI.html
+++ b/WebGUI/html/DeleteWiz_ConfigurationGUI.html
@@ -36,7 +36,7 @@
 	
 	<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 	<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
-	<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+	<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 	<script type="text/JavaScript" src="/WebPath/js/js_lib/SimpleContextMenu.js"></script>
 	<script type="text/JavaScript" src="/WebPath/js/js_lib/ConfigurationAPI.js"></script>
 	<script type="text/JavaScript" src="/WebPath/js/DeleteWiz_ConfigurationGUI.js"></script>
@@ -64,7 +64,7 @@
 </head>
 	
 
-<body onload='Javascript:init();'>	
+<body onload='//init() called by DesktopContent.js'>	
 		
 	<!-- body content populated by javascript paint(), etc. -->
 	
