--- a/WebGUI/html/SimpleContextMenuTest.html
+++ b/WebGUI/html/SimpleContextMenuTest.html
@@ -14,7 +14,7 @@
 	
 	<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 	<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
-	<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+	<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 	<script type="text/JavaScript" src="/WebPath/js/js_lib/SimpleContextMenu.js"></script>
 	
 	<script>		
@@ -81,7 +81,7 @@
 </head>
 	
 
-<body onload='Javascript:init();'>	
+<body onload='//init() called by DesktopContent.js'>	
 		
 	<h1>Simple Context Example</h1>
 	<div id='display'></div>
