--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -274,7 +274,7 @@
 
 <script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>
 <script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>
-<script type="text/JavaScript"src="/WebPath/js/DesktopWindowContentCode.js"></script>
+<script type="text/JavaScript"src="/WebPath/js/DesktopContent.js"></script>
 <script type="text/JavaScript" src="/WebPath/js/js_lib/ConfigurationAPI.js"></script>
 
 <script>		
@@ -2509,7 +2509,7 @@
 </head>
 
 
-<body onload='Javascript:init();'>
+<body onload='//init() called by DesktopContent.js'>
 		
 <canvas id="physicsCanvas"></canvas>
 		
