--- a/WebGUI/html/SystemStatus.html
+++ b/WebGUI/html/SystemStatus.html
@@ -8,13 +8,13 @@
 	<!-- Javascript files -->
 	<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>
 	<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>
-	<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+	<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 	<script type="text/JavaScript" src="/WebPath/js/SystemStatus.js"></script>
 
 </head>
 
 
-<body onload='SystemStatus:init();'>
+<body onload='//SystemStatus:init() called by DesktopContent.js;'>
 
 
 		<!-- Header ------------------>
