--- a/WebGUI/html/TEMPLATE.html
+++ b/WebGUI/html/TEMPLATE.html
@@ -41,7 +41,7 @@
 		
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/DesktopContent.js"></script>
 		
 		
 		<script>		
@@ -132,7 +132,7 @@
 	</head>
 	
 	
-	<body onload='Javascript:init();'>	
+	<body onload='//init() called by DesktopContent.js'>	
 			
 		<div class='mainBlock' id='block1'>
 		anything
