--- a/WebGUI/html/widgets/label.html
+++ b/WebGUI/html/widgets/label.html
@@ -82,7 +82,7 @@
 
 </head>
 
-	<body onload='Javascript:init();'>
+	<body onload='//init() called by DesktopContent.js'>
 
 	<div id="display"></div>
 
