--- a/WebGUI/html/widgets/picture.html
+++ b/WebGUI/html/widgets/picture.html
@@ -73,7 +73,7 @@
 
 </head>
 
-	<body onload='Javascript:init();'>
+	<body onload='//init() called by DesktopContent.js'>
 
 	<div id="display"></div>
 
