--- a/WebGUI/html/widgets/widget_text.html
+++ b/WebGUI/html/widgets/widget_text.html
@@ -222,7 +222,7 @@
 
 	</head>
 
-	<body onload='Javascript:init();'>
+	<body onload='//init() called by DesktopContent.js'>
 
 	<div class="wrapper" id="display" width="100%" height="100%">
 	</div>
