--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -22,7 +22,7 @@
 	</head>
 
 
-	<body onload='Macromaker:init();'>
+	<body onload='//init() called by DesktopContent.js'>
 	
 		<div id="nav">
 			<ul>
