Improvements to debug popups to display complex Javascript objects; also, Tree View now can add tables directly from tree-view rather than having to navigate to group view

--- a/WebGUI/html/ConfigurationGUI_artdaq.html
+++ b/WebGUI/html/ConfigurationGUI_artdaq.html
@@ -4487,6 +4487,8 @@
 
 				var groupTypes = ["Context","Configuration"];
 				var stepString;
+				
+				str += "<b><u>Load Groups</u></b><br><br>";
 
 				for(var g=0;g<groupTypes.length;++g)
 				{
@@ -4494,7 +4496,7 @@
 							groupTypes[g] + "-";
 
 					str += "Choose a '" + groupTypes[g] +
-							"' group to activate (either a System Alias or specific group):";
+							"' group to activate<br>(either a System Alias or specific group):";
 
 					str += htmlClearDiv();
 
